--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   intl: ^0.17.0
+  flutter_slidable: ^2.0.0
+  flutter_slidable_list_view: ^1.2.8
 
 
 dev_dependencies:
