--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,10 @@ dependencies:
   intl: ^0.17.0
   flutter_slidable: ^2.0.0
   flutter_slidable_list_view: ^1.2.8
+  shared_preferences_android: ^2.0.13
+  shared_preferences_windows: ^2.1.1
+  sp_util: ^2.0.3
+  shared_preferences_ios: ^2.1.1
 
 
 dev_dependencies:
